// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartHelpers should aggregated generated x,y axis props: default settings 1`] = `
{
  "xAxisProps": {
    "fixLabelOverlap": true,
    "label": undefined,
    "tickFormat": [Function],
    "tickValues": [],
  },
  "yAxisProps": [
    {
      "dependentAxis": true,
      "label": undefined,
      "orientation": "left",
      "showGrid": true,
      "style": {
        "axis": {},
        "tickLabels": {},
      },
      "tickFormat": [Function],
    },
  ],
}
`;

exports[`ChartHelpers should generate a max x, max y from datasets: max x, y 1`] = `
{
  "individualMaxY": {
    "dolor": 100,
    "ipsum": 100,
    "lorem": 10,
  },
  "maxX": 6,
  "maxY": 200,
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY less than 0.1 1`] = `
{
  "domain": {
    "y": [
      0,
      0.0125,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY number 1`] = `
{
  "domain": {
    "y": [
      0,
      300,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY object 1`] = `
{
  "domain": {
    "y": [
      0,
      1.25,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate element props: custom valueFormats 1`] = `
{
  "xValueNaN": 0,
  "xValueNull": null,
  "xValueNumber": 0,
  "xValueString": "lorem",
  "xValueUndefined": 0,
  "yValueNaN": 0,
  "yValueNull": null,
  "yValueNumber": 0,
  "yValueString": "ipsum",
  "yValueUndefined": 0,
}
`;

exports[`ChartHelpers should generate element props: props 1`] = `
{
  "elements": [
    {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 10,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 10,
          },
          {
            "x": 3,
            "y": 10,
          },
          {
            "x": 4,
            "y": 10,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-lorem-",
        "name": "chart-lorem-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  ],
  "elementsById": {
    "lorem": {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 10,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 10,
          },
          {
            "x": 3,
            "y": 10,
          },
          {
            "x": 4,
            "y": 10,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-lorem-",
        "name": "chart-lorem-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  },
  "stackedElements": [
    {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-ipsum-",
        "name": "chart-ipsum-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
    {
      "chartType": undefined,
      "props": {
        "animate": true,
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "interpolation": "lorem ipsum interpolation",
        "key": "chart-dolor-",
        "name": "chart-dolor-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  ],
  "stackedElementsById": {
    "dolor": {
      "chartType": undefined,
      "props": {
        "animate": true,
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "interpolation": "lorem ipsum interpolation",
        "key": "chart-dolor-",
        "name": "chart-dolor-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
    "ipsum": {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-ipsum-",
        "name": "chart-ipsum-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  },
}
`;

exports[`ChartHelpers should generate tooltip data/content: tooltip, content 1`] = `
[
  [
    {
      "datum": {
        "index": 0,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 20,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 20,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 10,
            },
          },
        },
        "x": 0,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 1,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
        },
        "x": 1,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 2,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 30,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 30,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 10,
            },
          },
        },
        "x": 2,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 3,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 50,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 50,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 10,
            },
          },
        },
        "x": 3,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 4,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 100,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 100,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 10,
            },
          },
        },
        "x": 4,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 5,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
        },
        "x": 5,
        "y": 10,
      },
    },
  ],
]
`;

exports[`ChartHelpers should generate tooltip data/content: tooltip, settings 1`] = `
{
  "0": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 20,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 20,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 0,
    "y": null,
  },
  "1": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 1,
    "y": null,
  },
  "2": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 30,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 30,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 2,
    "y": null,
  },
  "3": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 50,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 50,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 3,
    "y": null,
  },
  "4": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 100,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 100,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 4,
    "y": null,
  },
  "5": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 5,
    "y": null,
  },
}
`;

exports[`ChartHelpers should generate x axis props: format callback 1`] = `
[
  {
    "item": {
      "x": 1,
      "y": 10,
    },
    "maxX": 6,
    "nextItem": {
      "x": 2,
      "y": 10,
    },
    "previousItem": {
      "x": 0,
      "y": 10,
    },
    "tick": 1,
  },
]
`;

exports[`ChartHelpers should generate x axis props: props 1`] = `
{
  "label": undefined,
  "tickFormat": [Function],
  "tickValues": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
}
`;

exports[`ChartHelpers should generate y axis props: format callback, 0, left axis 1`] = `
[
  {
    "isMultiAxis": true,
    "maxY": 10,
    "tick": 10,
  },
]
`;

exports[`ChartHelpers should generate y axis props: format callback, 1, right axis 1`] = `
[
  {
    "isMultiAxis": true,
    "maxY": 100,
    "tick": 100,
  },
]
`;

exports[`ChartHelpers should generate y axis props: props 1`] = `
[
  {
    "label": undefined,
    "orientation": "left",
    "style": {
      "axis": {},
      "tickLabels": {},
    },
    "tickFormat": [Function],
  },
  {
    "label": undefined,
    "orientation": "right",
    "style": {
      "axis": {
        "stroke": "lorem ipsum stroke",
        "strokeWidth": 2,
      },
      "tickLabels": {},
    },
    "tickFormat": [Function],
  },
]
`;

exports[`ChartHelpers should return specific properties: specific properties 1`] = `
{
  "generateAxisProps": [Function],
  "generateDomains": [Function],
  "generateElementsProps": [Function],
  "generateMaxXY": [Function],
  "generateTooltipData": [Function],
  "generateXAxisProps": [Function],
  "generateYAxisProps": [Function],
}
`;
